--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
-* {
+body {
   background-color: darkgray;
 }
 
-h1 {
+h1,
+h2 {
   margin: auto;
   text-align: center;
+}
+
+h2 {
+  color: rgb(255, 230, 0);
 }
 
 .boardContainer {
@@ -25,4 +30,71 @@ h1 {
   text-align: center;
   vertical-align: middle;
   font-size: 10rem;
+}
+
+.bg-modal {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  position: absolute;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  display: none;
+}
+
+.modal-content {
+  width: 500px;
+  height: 400px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 4px;
+  text-align: center;
+  padding: 20px;
+  position: relative;
+}
+
+.close {
+  position: absolute;
+  top: 0;
+  right: 14px;
+  font-size: 2rem;
+  transform: rotate(45deg);
+  cursor: pointer;
+}
+
+input {
+  width: 50%;
+  display: block;
+  margin: 15px auto;
+}
+
+img {
+  width: 150px;
+}
+
+.button,
+#submitButton {
+  display: inline;
+  letter-spacing: 1px;
+  text-decoration: none;
+  color: white;
+  padding: 1rem;
+  background-color: #009579;
+  border: none;
+  border-radius: 4px;
+  margin: 1rem;
+  overflow: hidden;
+  font-family: "Quicksand", Times, serif;
+  font-size: 1.5rem;
+  font-weight: 100;
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: #008168;
+}
+
+.button:active {
+  background-color: #005544;
 }
