--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ h2 {
   display: flex;
   justify-content: center;
   align-items: center;
-  display: none;
+  display: flex;
 }
 
 .modal-content {
