--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@ h2 {
 
 h2 {
   color: rgb(255, 230, 0);
+  font-size: 2rem;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .boardContainer {
@@ -74,7 +77,8 @@ img {
 }
 
 .button,
-#submitButton {
+#submitButton,
+#reset {
   display: inline;
   letter-spacing: 1px;
   text-decoration: none;
