--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@ body {
   background-color: darkgray;
 }
 
+.root {
+  height: 100vh;
+  width: 100vw;
+}
+
 h1,
 h2 {
   margin: auto;
@@ -17,22 +22,19 @@ h2 {
 
 .boardContainer {
   margin: auto;
-  padding: 10px;
   text-align: center;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 1rem;
-  width: 50%;
-  height: 400px;
+  width: 500px;
+  height: 500px;
 }
 
 .boardContainer div {
-  width: 200px;
-  height: 200px;
+  margin: 9px;
+  width: 150px;
+  height: 150px;
   background-color: aquamarine;
-  text-align: center;
-  vertical-align: middle;
-  font-size: 10rem;
+  font-size: 8em;
 }
 
 .bg-modal {
@@ -80,19 +82,21 @@ img {
 #submitButton,
 #reset {
   display: inline;
-  letter-spacing: 1px;
   text-decoration: none;
   color: white;
   padding: 1rem;
   background-color: #009579;
-  border: none;
   border-radius: 4px;
   margin: 1rem;
-  overflow: hidden;
   font-family: "Quicksand", Times, serif;
   font-size: 1.5rem;
-  font-weight: 100;
   cursor: pointer;
+}
+
+#reset {
+  position: relative;
+  margin: 10px auto;
+  left: 47%;
 }
 
 .button:hover {
