--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   background-color: darkgray;
 }
@@ -5,23 +11,27 @@ body {
 .root {
   height: 100vh;
   width: 100vw;
+  padding: 5vh;
+}
+
+.game {
+  display: flex;
 }
 
 h1,
 h2 {
-  margin: auto;
+  margin-top: 0;
   text-align: center;
 }
 
 h2 {
   color: rgb(255, 230, 0);
-  font-size: 2rem;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .boardContainer {
-  margin: auto;
+  margin: 0 auto;
   text-align: center;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -81,22 +91,23 @@ img {
 .button,
 #submitButton,
 #reset {
-  display: inline;
+  height: 50px;
+  width: 100px;
   text-decoration: none;
   color: white;
-  padding: 1rem;
   background-color: #009579;
   border-radius: 4px;
-  margin: 1rem;
+  outline: none;
+  overflow: hidden;
   font-family: "Quicksand", Times, serif;
-  font-size: 1.5rem;
+  font-size: 20px;
   cursor: pointer;
 }
 
 #reset {
-  position: relative;
-  margin: 10px auto;
-  left: 47%;
+  position: absolute;
+  right: 20%;
+  bottom: 12%;
 }
 
 .button:hover {
